<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E30C0C"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="#fff"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/editTextCityChi1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/bei" />

            <EditText
                android:id="@+id/editTextcitychi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/sha" />

            <EditText
                android:id="@+id/editTextCityChi3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/she" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="315dp"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/btnBackChi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E2E30C0C"
                android:text="@string/btnBackChi"
                card_view:backgroundTint="#E2E30C0C" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>