<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6832716B"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="184dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="#fff"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <Button
                android:id="@+id/btnPakistan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CE80CC34"
                android:text="@string/btnPak"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                card_view:backgroundTint="#CE80CC34" />

            <Button
                android:id="@+id/btnIndia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnInd"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                card_view:backgroundTint="#CB344191" />

            <Button
                android:id="@+id/btnChina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnChi"
                android:textAllCaps="true"
                android:textColor="#FBFBFB"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                card_view:backgroundTint="#E2E30C0C" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>